# astro_tinder

./: README.md  database.sqlite3  main.py  pyproject.toml
app/database/: models.py  requests.py
app/handlers/: __init__.py  errors.py  lang.py  lookup.py  my_profile.py  registration.py
app/keyboards/: default.py
app/utils/: fstate.py  logger.py  states.py
