[project]
name = "daivin"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiogram (==3.4.1)",
    "sqlalchemy (==2.0.30)",
    "aiosqlite (==0.20.1)",
    "aiohttp (==3.9.5)",
    "geopy (==2.4.1)",
    "dotenv (>=0.9.9,<0.10.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "cryptography (>=45.0.4,<46.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
